apps/element/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: element-web
spec:
  selector:
    matchLabels:
      app: matrix
      component: element-web
  template:
    metadata:
      labels:
        app: matrix
        component: element-web
    spec:
      containers:
        - name: element-web
          image: docker.io/vectorim/element-web:v1.11.17
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /app/config.json
              name: element-config
              subPath: config.json
      volumes:
        - name: element-config
          configMap:
            name: element-config
