apps/element/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: element-web
spec:
  selector:
    app: element-web
  ports:
    - port: 80
