apps/element/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: element-web
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - element.hubbe.club
  rules:
    - host: element.hubbe.club
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: element-web
              port:
                number: 80
